Removal of excerpts from other documents
I removed all excerpts from other documents, until that IPR stuff is
sorted out.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 D2.3/Synthesis/.DS_Store
 
 Workspace/SafetyRequirementsExamples/.DS_Store
+
+Workspace/SafetyRequirementsExamples/includes/.DS_Store
