Small corrections of the communication model
Small corrections of the model to fit closer to the SRS (thanks to
Matthias for the remarks)

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ D2.3/Synthesis/.DS_Store
 Workspace/SafetyRequirementsExamples/.DS_Store
 
 Workspace/SafetyRequirementsExamples/includes/.DS_Store
+
+Workspace/.DS_Store
