--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ Workspace/SafetyRequirementsExamples/.DS_Store
 Workspace/SafetyRequirementsExamples/includes/.DS_Store
 
 Workspace/.DS_Store
+
+.DS_Store
