Update of the data model

--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,8 @@
 *.lot
 
 D2.3/Synthesis/.DS_Store
-
 Workspace/SafetyRequirementsExamples/.DS_Store
-
 Workspace/SafetyRequirementsExamples/includes/.DS_Store
-
 Workspace/.DS_Store
-
 .DS_Store
+/review/
